# goku

./: .coveragerc  .isort.cfg  AUTHORS.rst  LICENSE.txt  README.rst  TODO.md  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  contract.rst  index.rst  why.rst
docs/diary/: index.rst  things_i_hate.rst  write_initial_tests.rst
docs/steps/: copy_alabaster.rst  index.rst  preparation.rst  research_api.rst
src/goku/: __init__.py  basic_layout.html  donate.html  layout.html  support.py  theme.conf
src/sphinx_bulma/: __init__.py  about.html  basic_layout.html  layout.html  skeleton.py  support.py  theme.conf
tests/: conftest.py  test_skeleton.py
tests/integration/basic_layout/: conftest.py  test_header.py
tests/integration/rendered/: test_header.py
tests/integration/sphinx/: conftest.py  test_alabaster_customized.py  test_alabaster_defaults.py  test_alabaster_sidebars.py  test_basic_customized.py  test_basic_layout.py  test_basic_sidebars.py  test_basic_theme.py  test_indices.py
tests/integration/sphinx/roots/test-alabaster-customized/: conf.py
tests/integration/sphinx/roots/test-alabaster-customized/_templates/: layout.html
tests/integration/sphinx/roots/test-alabaster-hidepoweredby/: conf.py
tests/integration/sphinx/roots/test-alabaster-sidebars/: conf.py
tests/integration/sphinx/roots/test-basic-customized/: conf.py
tests/integration/sphinx/roots/test-basic-sidebars/: conf.py
tests/integration/sphinx/roots/test-basic-theme/: conf.py
tests/integration/sphinx/roots/test-basic-theme/_templates/: layout.html
tests/integration/sphinx/roots/test-setup/: conf.py
