# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = sphinx_bulma
description = Bulma theme for Sphinx
author = Paul Everitt
author-email = pauleveritt@me.com
license = mit
url = https://pyscaffold.org/
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires = numpy; scipy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install sphinx_bulma[PDF]` like:
# PDF = ReportLab; RXP
# Add here dev/test requirements (semicolon/line-separated)
dev =
    pytest
    pytest-cov
    sphinx
    beautifulsoup4


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = sphinx_bulma.module:function
# For example:
# console_scripts =
#     fibonacci = sphinx_bulma.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
sphinx.html_themes =
    sphinx_bulma = sphinx_bulma
